finish main page

--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,4 @@
 <!--#include virtual="/parts/header.html" -->
-<!--#include virtual="/parts/head.html" -->
 <section class="main__section">
     <div class="main__section--content">
         <h1 class="main__section--title">Science Backed Precision Dosing</h1>
@@ -106,8 +105,8 @@
 <section class="mushroom__section">
     <div class="mushroom__wrap">
         <div class="mushroom__line">
-            <svg width="63" height="63" viewBox="0 0 63 63" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <circle cx="31.9509" cy="31.6657" r="29.9938" stroke="#F5FFF8" stroke-width="2"/>
+            <svg viewBox="0 0 63 63" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="31" cy="31" r="29" stroke="#F5FFF8" stroke-width="2"/>
             </svg>
         </div>
         <div class="mushroom__box">
