--- a/app/parts/head.html
+++ b/app/parts/head.html
@@ -1,10 +1,13 @@
 <header class="header__main">
-    <img src="images/dist/logo.png" class="header__main--logo" alt="">
+
+    <a href="/index.html">
+        <img src="images/dist/logo.png" class="header__main--logo" alt="">
+    </a>
     <div class="header__main--nav">
         <nav>
-            <a href="product.html"><span>Product</span></a>
-            <a href="about.html"><span>About</span></a>
-            <a href="faq.html"><span>FAQ</span></a>
+            <a href="/products.html"><span>Product</span></a>
+            <a href="/about.html"><span>About</span></a>
+            <a href="/faq.html"><span>FAQ</span></a>
         </nav>
         <a href="cart.html" class="header__main--button"><span>Cart</span></a>
     </div>
