--- a/app/parts/header.html
+++ b/app/parts/header.html
@@ -10,3 +10,4 @@
 	<link rel="stylesheet" href="https://use.typekit.net/wct8ivs.css">
 </head>
 <body data-scroll-container>
+<!--#include virtual="/parts/head.html" -->
