start products page

--- a/app/products.html
+++ b/app/products.html
@@ -1,7 +1,12 @@
 <!--#include virtual="/parts/header.html" -->
 
-<section>
-
+<section class="p_header">
+    <div class="p_header--wrap">
+        <h1 class="p_header--title">precision caps</h1>
+        <div class="p_header--description">
+            <p>Designed to help you reduce stress & anxiety, be creative, and stay focused. Perfect for meetings, work, and everyday life</p>
+        </div>
+    </div>
 </section>
 
 <!--#include virtual="/parts/footer.html" -->
