--- a/app/parts/header.html
+++ b/app/parts/header.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html data-scroll-container>
 <head>
 	<meta charset="utf-8">
 	<title>flowdose</title>
@@ -9,5 +9,5 @@
 	<link rel="stylesheet" href="css/app.min.css">
 	<link rel="stylesheet" href="https://use.typekit.net/wct8ivs.css">
 </head>
-<body data-scroll-container>
+<body data-scroll-section>
 <!--#include virtual="/parts/head.html" -->
