--- a/app/about.html
+++ b/app/about.html
@@ -2,11 +2,7 @@
 
 <section class="a_box">
     <div class="a_box--wrapper">
-        <div class="a_box--title"
-             data-scroll
-             data-scroll-direction="horizontal"
-             data-scroll-speed="-2"
-        >
+        <div class="a_box--title" data-scroll data-scroll-direction="horizontal" data-scroll-speed="-2">
             <img src="/images/dist/about--title.png" alt="">
         </div>
 
@@ -24,6 +20,46 @@
             </div>
         </div>
     </div>
+
+    <div class="a__wrapper">
+        <div class="a_box--mood">
+            <div class="a_box--big--wrap">
+                <div class="a_box--mood--item">
+                    <h3 class="a_box--mood--item__title">Mood support</h3>
+                    <div class="a_box--mood--item__text">
+                        <p>High-quality medicinal mushrooms can be a powerful support to health and wellbeing. They can
+                            be
+                            used to promote focus, increase energy levels, manage stress and strengthen immunity.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="a_mood--image">
+                <img src="/images/dist/a_mood__image.png" alt="" class="a_mood--image--main" data-scroll data-scroll-direction="vertical" data-scroll-speed="-2">
+                <img src="/images/dist/a_mood--svg-1.svg" alt="" class="a_mood--image--svg1" data-scroll data-scroll-direction="horizontal" data-scroll-speed="4">
+                <img src="/images/dist/a_mood--svg-2.svg" alt="" class="a_mood--image--svg2" data-scroll data-scroll-direction="horizontal" data-scroll-speed="-4">
+            </div>
+            <img src="/images/dist/a_box--bg.png" alt="" class="a_box--big--bg">
+        </div>
+
+        <div class="a_box--mindful">
+            <div class="a_box--big--wrap">
+                <div class="a_box--mindful--item">
+                    <h3 class="a_box--mindful--item__title">mindful harvesting</h3>
+                    <div class="a_box--mindful--item__text">
+                        <p>High-quality medicinal mushrooms can be a powerful support to health and wellbeing. They can
+                            be
+                            used to promote focus, increase energy levels, manage stress and strengthen immunity.</p>
+                    </div>
+                </div>
+                <img src="/images/dist/a_box--mindful--svg.svg" alt="" class="a_box--mindful--svg">
+            </div>
+            <img src="/images/dist/a_box--bg-2.png" alt="" class="a_box--big--bg">
+
+        </div>
+    </div>
+
+
 </section>
 
 <!--#include virtual="/parts/footer.html" -->
