convert image to webp

--- a/app/about.html
+++ b/app/about.html
@@ -3,12 +3,12 @@
 <section class="a_box">
     <div class="a_box--wrapper">
         <div class="a_box--title" data-scroll data-scroll-direction="horizontal" data-scroll-speed="-2">
-            <img src="/images/dist/about--title.png" alt="">
+            <img src="/images/dist/about--title.webp" alt="">
         </div>
 
         <div class="a_box--tradition">
             <div class="a_box--tradition--image">
-                <img src="/images/dist/tradition--image.png" alt="">
+                <img src="/images/dist/tradition--image.webp" alt="">
             </div>
             <div class="a_box--tradition--info">
                 <h2 class="a_box--tradition--title">TRADITION MEETS MODERN SCIENCE</h2>
@@ -35,11 +35,11 @@
             </div>
 
             <div class="a_mood--image">
-                <img src="/images/dist/a_mood__image.png" alt="" class="a_mood--image--main" data-scroll data-scroll-direction="vertical" data-scroll-speed="-2">
+                <img src="/images/dist/a_mood__image.webp" alt="" class="a_mood--image--main" data-scroll data-scroll-direction="vertical" data-scroll-speed="-2">
                 <img src="/images/dist/a_mood--svg-1.svg" alt="" class="a_mood--image--svg1" data-scroll data-scroll-direction="horizontal" data-scroll-speed="4">
                 <img src="/images/dist/a_mood--svg-2.svg" alt="" class="a_mood--image--svg2" data-scroll data-scroll-direction="horizontal" data-scroll-speed="-4">
             </div>
-            <img src="/images/dist/a_box--bg.png" alt="" class="a_box--big--bg">
+            <img src="/images/dist/a_box--bg.webp" alt="" class="a_box--big--bg">
         </div>
 
         <div class="a_box--mindful">
@@ -54,7 +54,7 @@
                 </div>
                 <img src="/images/dist/a_box--mindful--svg.svg" alt="" class="a_box--mindful--svg">
             </div>
-            <img src="/images/dist/a_box--bg-2.png" alt="" class="a_box--big--bg">
+            <img src="/images/dist/a_box--bg-2.webp" alt="" class="a_box--big--bg">
 
         </div>
     </div>
