--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
         <h1 class="main__section--title">Science Backed Precision Dosing</h1>
         <a href="" class="main__section--button"><span>Explore</span></a>
     </div>
-    <img src="images/dist/main__section--bg.png" alt="" class="main__section--bg">
+    <img src="images/dist/main__section--bg.webp" alt="" class="main__section--bg">
 </section>
 
 <section class="explore__section">
@@ -14,21 +14,21 @@
         <div class="explore__section--wrap">
             <a href="#" class="explore__section--item">
                 <span class="explore__section--item__image">
-                    <img src="images/dist/explore__item-1.png" alt="">
+                    <img src="images/dist/explore__item-1.webp" alt="">
                 </span>
                 <span class="explore__section--item__name">Precision 100 Caps</span>
                 <span class="explore__section--item__price">$100</span>
             </a>
             <a href="#" class="explore__section--item">
                 <span class="explore__section--item__image">
-                    <img src="images/dist/explore__item-2.png" alt="">
+                    <img src="images/dist/explore__item-2.webp" alt="">
                 </span>
                 <span class="explore__section--item__name">Booster Caps</span>
                 <span class="explore__section--item__price">$100</span>
             </a>
             <a href="#" class="explore__section--item">
                 <span class="explore__section--item__image">
-                    <img src="images/dist/explore__item-3.png" alt="">
+                    <img src="images/dist/explore__item-3.webp" alt="">
                 </span>
                 <span class="explore__section--item__name">Infused Tea</span>
                 <span class="explore__section--item__price">$100</span>
@@ -40,12 +40,12 @@
          data-scroll
          data-scroll-direction="horizontal"
          data-scroll-speed="-2">
-    <img src="images/dist/explore__section--bg.png" alt="" class="explore__section--bg">
+    <img src="images/dist/explore__section--bg.webp" alt="" class="explore__section--bg">
 </section>
 
 <section class="crafted__section">
     <div class="crafted__section--image">
-        <img src="images/dist/crafted__section--image.png" alt="">
+        <img src="images/dist/crafted__section--image.webp" alt="">
     </div>
     <div class="crafted__section--info">
         <h2 class="crafted__section--title">Crafted for Fluid Thinkers</h2>
@@ -99,7 +99,7 @@
         </div>
     </div>
 
-    <img src="images/dist/benefits__section--bg.png" alt="" class="benefits__section--bg">
+    <img src="images/dist/benefits__section--bg.webp" alt="" class="benefits__section--bg">
 </section>
 
 <section class="mushroom__section">
@@ -121,7 +121,7 @@
             </div>
         </div>
     </div>
-    <img src="images/dist/mushroom__section--bg.png" alt="" class="mushroom__section--bg">
+    <img src="images/dist/mushroom__section--bg.webp" alt="" class="mushroom__section--bg">
 </section>
 
 <!--#include virtual="/parts/footer.html" -->
