--- a/app/products.html
+++ b/app/products.html
@@ -8,14 +8,14 @@
                 and everyday life</p>
         </div>
     </div>
-    <img src="/images/dist/p_header--bg.png" alt="" class="p_header--bg">
+    <img src="/images/dist/p_header--bg.webp" alt="" class="p_header--bg">
 </section>
 
 <section class="p_products">
     <div class="p_products--wrap">
         <a href="#" class="p_products--item">
             <div class="p_products--image">
-                <img src="/images/dist/p_products--item.png" alt="">
+                <img src="/images/dist/p_products--item.webp" alt="">
             </div>
             <div class="p_products--name">
                 <p>Precision Caps</p>
@@ -28,7 +28,7 @@
 
         <a href="#" class="p_products--item">
             <div class="p_products--image">
-                <img src="/images/dist/p_products--item.png" alt="">
+                <img src="/images/dist/p_products--item.webp" alt="">
             </div>
             <div class="p_products--name">
                 <p>Precision Caps</p>
@@ -41,7 +41,7 @@
 
         <a href="#" class="p_products--item">
             <div class="p_products--image">
-                <img src="/images/dist/p_products--item.png" alt="">
+                <img src="/images/dist/p_products--item.webp" alt="">
             </div>
             <div class="p_products--name">
                 <p>Precision Caps</p>
@@ -54,7 +54,7 @@
 
         <a href="#" class="p_products--item">
             <div class="p_products--image">
-                <img src="/images/dist/p_products--item.png" alt="">
+                <img src="/images/dist/p_products--item.webp" alt="">
             </div>
             <div class="p_products--name">
                 <p>Precision Caps</p>
@@ -67,7 +67,7 @@
 
         <a href="#" class="p_products--item">
             <div class="p_products--image">
-                <img src="/images/dist/p_products--item.png" alt="">
+                <img src="/images/dist/p_products--item.webp" alt="">
             </div>
             <div class="p_products--name">
                 <p>Precision Caps</p>
@@ -89,14 +89,14 @@
                 experience.</p>
         </div>
     </div>
-    <img src="/images/dist/p_infused--bg.png" alt="" class="p_infused--bg">
+    <img src="/images/dist/p_infused--bg.webp" alt="" class="p_infused--bg">
 </section>
 
 <section class="p_products">
     <div class="p_products--wrap">
         <a href="#" class="p_products--item">
             <div class="p_products--image">
-                <img src="/images/dist/p_products--item-2.png" alt="">
+                <img src="/images/dist/p_products--item-2.webp" alt="">
             </div>
             <div class="p_products--name">
                 <p>Precision Caps</p>
@@ -109,7 +109,7 @@
 
         <a href="#" class="p_products--item">
             <div class="p_products--image">
-                <img src="/images/dist/p_products--item-2.png" alt="">
+                <img src="/images/dist/p_products--item-2.webp" alt="">
             </div>
             <div class="p_products--name">
                 <p>Precision Caps</p>
@@ -122,7 +122,7 @@
 
         <a href="#" class="p_products--item">
             <div class="p_products--image">
-                <img src="/images/dist/p_products--item-2.png" alt="">
+                <img src="/images/dist/p_products--item-2.webp" alt="">
             </div>
             <div class="p_products--name">
                 <p>Precision Caps</p>
