start single page

--- a/app/parts/footer.html
+++ b/app/parts/footer.html
@@ -35,7 +35,7 @@
     <div class="footer__main--copyrights">
         <span>© Flowdose. All rights reserved. Address</span>
     </div>
-    <img src="images/dist/footer__main--bg.png" alt="" class="footer__main--bg">
+    <img src="images/dist/footer__main--bg.webp" alt="" class="footer__main--bg">
 </footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.0/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.0/ScrollTrigger.min.js"></script>
