--- a/app/parts/head.html
+++ b/app/parts/head.html
@@ -1,7 +1,7 @@
 <header class="header__main">
 
     <a href="/index.html">
-        <img src="images/dist/logo.png" class="header__main--logo" alt="">
+        <img src="images/dist/logo.webp" class="header__main--logo" alt="">
     </a>
     <div class="header__main--nav">
         <nav>
