--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <section class="main__section">
     <div class="main__section--content">
         <h1 class="main__section--title">Science Backed Precision Dosing</h1>
-        <a href="" class="main__section--button"><span>Explore</span></a>
+        <a href="" class="button main__section--button"><span>Explore</span></a>
     </div>
     <img src="images/dist/main__section--bg.webp" alt="" class="main__section--bg">
 </section>
