--- a/app/single-product-caps.html
+++ b/app/single-product-caps.html
@@ -10,63 +10,208 @@
 
         <div class="sp_main--right">
             <h1 class="sp_main--name">Precision Caps</h1>
-            <div class="sp_main--size">
-                <div class="sp_main--radio">
-                    <div class="sp_main--radio__wrap">
-                        <input type="radio" id="size100" name="size" value="100">
-                        <label for="size100">100mg</label>
-                    </div>
-
-                    <div class="sp_main--radio__wrap">
-                        <input type="radio" id="size200" name="size" value="200">
-                        <label for="size200">200mg</label>
-                    </div>
-
-                    <div class="sp_main--radio__wrap">
-                        <input type="radio" id="size300" name="size" value="300">
-                        <label for="size300">300mg</label>
-                    </div>
-                </div>
-            </div>
-            <div class="sp_main--description">
-                <p>Best for microdosing <br>
-                    If you’re new, start with 100mg or 200mg</p>
-                <p>Designed to help you reduce stress & anxiety, be creative, and stay focused. Perfect for meetings,
-                    work, and everyday life.</p>
-                <p>Made with</p>
-                <ul>
-                    <li>Oaxacan Mushrooms</li>
-                    <li>Theanine</li>
-                    <li>GABA</li>
-                </ul>
-                <p>
-                    Optional: <br>
-                    Use booster caps to fine tune precision caps
-                    if needed
-                </p>
-            </div>
-            <div class="sp_main--amount">
-                <span class="sp_main--amount__size">$100</span>
-                <div class="sp_main--amount__value">
-                    <div class="sp_main--amount__wrap">
-                        <div class="sp_main--amount__minus">
-                            <svg width="13" height="2" viewBox="0 0 13 2" fill="none"
-                                 xmlns="http://www.w3.org/2000/svg">
-                                <line y1="1.25" x2="13" y2="1.25" stroke="black" stroke-width="1.5"/>
-                            </svg>
+            <form>
+                <div class="sp_main--size">
+                    <div class="sp_main--radio">
+                        <div class="sp_main--radio__wrap">
+                            <input type="radio" id="size100" name="size" value="100" checked>
+                            <label for="size100">100mg</label>
+                            <div class="check"></div>
                         </div>
-                        <input type="number" value="1" id="sp_main--amount">
-                        <div class="sp_main--amount__plus">
-                            <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
-                                 xmlns="http://www.w3.org/2000/svg">
-                                <path d="M15.2669 8.224L15.1589 6.856H8.75094V0.123999H7.31094V6.856H0.830938L0.722938 8.224H7.31094V15.028H8.75094V8.224H15.2669Z"
-                                      fill="black"/>
-                            </svg>
+
+                        <div class="sp_main--radio__wrap">
+                            <input type="radio" id="size200" name="size" value="200">
+                            <label for="size200">200mg</label>
+                            <div class="check"></div>
+                        </div>
+
+                        <div class="sp_main--radio__wrap">
+                            <input type="radio" id="size300" name="size" value="300">
+                            <label for="size300">300mg</label>
+                            <div class="check"></div>
                         </div>
                     </div>
                 </div>
+                <div class="sp_main--description">
+                    <div class="sp_main--description__top">
+                        <p>Best for microdosing<br>
+                            If you’re new, start with 100mg or 200mg</p>
+                    </div>
+                    <p>Designed to help you reduce stress & anxiety, be creative, and stay focused. Perfect for
+                        meetings,
+                        work, and everyday life.</p>
+                    <ul>
+                        Made with
+                        <li>Oaxacan Mushrooms</li>
+                        <li>Theanine</li>
+                        <li>GABA</li>
+                    </ul>
+                    <p>
+                        Optional: <br>
+                        Use booster caps to fine tune precision caps
+                        if needed
+                    </p>
+                </div>
+                <div class="sp_main--amount">
+                    <span class="sp_main--amount__size">$100</span>
+
+                    <div class="sp_main--amount__value">
+                        <div class="sp_main--amount__wrap">
+                            <div class="sp_main--amount__minus">
+                                <svg width="13" height="2" viewBox="0 0 13 2" fill="none"
+                                     xmlns="http://www.w3.org/2000/svg">
+                                    <line y1="1.25" x2="13" y2="1.25" stroke="black" stroke-width="1.5"/>
+                                </svg>
+                            </div>
+                            <input type="number" value="1" id="sp_main--amount">
+                            <div class="sp_main--amount__plus">
+                                <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
+                                     xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M15.2669 8.224L15.1589 6.856H8.75094V0.123999H7.31094V6.856H0.830938L0.722938 8.224H7.31094V15.028H8.75094V8.224H15.2669Z"
+                                          fill="black"/>
+                                </svg>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="button sp_main--add"><span>Add to Cart</span></button>
+            </form>
+        </div>
+    </div>
+</section>
+
+<section class="sp_faq">
+    <div class="sp_faq--wrapper">
+        <div class="sp_faq--item">
+            <div class="sp_faq--item__header">
+                <span>product information</span>
+                <div class="sp_faq--item__header--button">
+                    <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M20.7991 11.06V9.17H11.7091V0.034999H9.81912V9.17H0.819119V11.06H9.81912V20.015H11.7091V11.06H20.7991Z"
+                              fill="#EDB179"/>
+                    </svg>
+                </div>
             </div>
-            <button class="sp_main--add"><span>Add to Cart</span></button>
+            <div class="sp_faq--item__info">
+                <img src="images/dist/sp_faq--item__info.webp" alt="">
+                <div class="sp_faq--item__info--text">
+                    <p>Stacked with scientifically proven natural ingredients</p>
+                    <ul>
+                        <li>
+                            <span>Theanine</span>
+                            <p>A natural antioxidant found in green tea that calms the mind and increases focus.
+                                Theanine is why you don’t get jittery from the caffeine in tea.
+                                For thousands of years, monks have been using the theanine in green tea to help with
+                                meditation.</p>
+                        </li>
+                        <li>
+                            <span>GABA</span>
+                            <p>A natural antioxidant that lowers stress and anxiety levels. Your body
+                                naturally produces GABA to bring your nervous system back to a more stable state.
+                                Natural sources of GABA include berries, fish, and whole grains.</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="sp_faq--item">
+            <div class="sp_faq--item__header">
+                <span>product information</span>
+                <div class="sp_faq--item__header--button">
+                    <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M20.7991 11.06V9.17H11.7091V0.034999H9.81912V9.17H0.819119V11.06H9.81912V20.015H11.7091V11.06H20.7991Z"
+                              fill="#EDB179"/>
+                    </svg>
+                </div>
+            </div>
+            <div class="sp_faq--item__info">
+                <img src="images/dist/sp_faq--item__info.webp" alt="">
+                <div class="sp_faq--item__info--text">
+                    <p>Stacked with scientifically proven natural ingredients</p>
+                    <ul>
+                        <li>
+                            <span>Theanine</span>
+                            <p>A natural antioxidant found in green tea that calms the mind and increases focus.
+                                Theanine is why you don’t get jittery from the caffeine in tea.
+                                For thousands of years, monks have been using the theanine in green tea to help with
+                                meditation.</p>
+                        </li>
+                        <li>
+                            <span>GABA</span>
+                            <p>A natural antioxidant that lowers stress and anxiety levels. Your body
+                                naturally produces GABA to bring your nervous system back to a more stable state.
+                                Natural sources of GABA include berries, fish, and whole grains.</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="sp_faq--item">
+            <div class="sp_faq--item__header">
+                <span>product information</span>
+                <div class="sp_faq--item__header--button">
+                    <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M20.7991 11.06V9.17H11.7091V0.034999H9.81912V9.17H0.819119V11.06H9.81912V20.015H11.7091V11.06H20.7991Z"
+                              fill="#EDB179"/>
+                    </svg>
+                </div>
+            </div>
+            <div class="sp_faq--item__info">
+                <img src="images/dist/sp_faq--item__info.webp" alt="">
+                <div class="sp_faq--item__info--text">
+                    <p>Stacked with scientifically proven natural ingredients</p>
+                    <ul>
+                        <li>
+                            <span>Theanine</span>
+                            <p>A natural antioxidant found in green tea that calms the mind and increases focus.
+                                Theanine is why you don’t get jittery from the caffeine in tea.
+                                For thousands of years, monks have been using the theanine in green tea to help with
+                                meditation.</p>
+                        </li>
+                        <li>
+                            <span>GABA</span>
+                            <p>A natural antioxidant that lowers stress and anxiety levels. Your body
+                                naturally produces GABA to bring your nervous system back to a more stable state.
+                                Natural sources of GABA include berries, fish, and whole grains.</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="sp_faq--item">
+            <div class="sp_faq--item__header">
+                <span>product information</span>
+                <div class="sp_faq--item__header--button">
+                    <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M20.7991 11.06V9.17H11.7091V0.034999H9.81912V9.17H0.819119V11.06H9.81912V20.015H11.7091V11.06H20.7991Z"
+                              fill="#EDB179"/>
+                    </svg>
+                </div>
+            </div>
+            <div class="sp_faq--item__info">
+                <img src="images/dist/sp_faq--item__info.webp" alt="">
+                <div class="sp_faq--item__info--text">
+                    <p>Stacked with scientifically proven natural ingredients</p>
+                    <ul>
+                        <li>
+                            <span>Theanine</span>
+                            <p>A natural antioxidant found in green tea that calms the mind and increases focus.
+                                Theanine is why you don’t get jittery from the caffeine in tea.
+                                For thousands of years, monks have been using the theanine in green tea to help with
+                                meditation.</p>
+                        </li>
+                        <li>
+                            <span>GABA</span>
+                            <p>A natural antioxidant that lowers stress and anxiety levels. Your body
+                                naturally produces GABA to bring your nervous system back to a more stable state.
+                                Natural sources of GABA include berries, fish, and whole grains.</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
 </section>
