--- a/app/parts/header.html
+++ b/app/parts/header.html
@@ -6,8 +6,9 @@
 	<meta name="description" content="flowdose">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="icon" href="images/favicon.png">
-	<link rel="stylesheet" href="css/app.min.css">
+	<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
 	<link rel="stylesheet" href="https://use.typekit.net/wct8ivs.css">
+	<link rel="stylesheet" href="css/app.min.css">
 </head>
 <body data-scroll-section>
 <!--#include virtual="/parts/head.html" -->
