--- a/app/products.html
+++ b/app/products.html
@@ -82,7 +82,8 @@
 
 <section class="p_infused">
     <div class="p_infused--wrap">
-        <h2 class="p_infused--title">Infused <br> TEA</h2>
+        <h2 class="p_infused--title">organic mushroom
+            Infused TEA</h2>
         <div class="p_infused--description">
             <p>We searched high and low to create the best tea that compliments the mushroom infusion. Top grade black
                 tea that has a balanced flavor, ginger to soothe the stomach and a citrus blend for a clean and smooth
