--- a/app/parts/footer.html
+++ b/app/parts/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer__main">
     <div class="container">
         <div class="footer__main--info">
-            <span>Follow us for recipes, bright colors and good mood</span>
+            <span>SPREADING HAPPINESS & GRATITUDE</span>
             <div class="footer__main--links">
                 <a href="#">
                     <svg viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
