finish home page mobile

--- a/app/index.html
+++ b/app/index.html
@@ -254,6 +254,7 @@
             </div>
         </div>
     </div>
+    <img src="images/dist/mushroom__section__mobile.webp" alt="" class="mushroom__section__mobile">
     <img src="images/dist/mushroom__section--bg.webp" alt="" class="mushroom__section--bg">
 </section>
 
