--- a/app/parts/head.html
+++ b/app/parts/head.html
@@ -23,11 +23,11 @@
             </div>
         </nav>
     </div>
-    <div class="header__main--cart">
+    <a href="/cart.html" class="header__main--cart">
         <svg width="28" height="22" viewBox="0 0 28 22" fill="none" xmlns="http://www.w3.org/2000/svg">
             <circle cx="21.7669" cy="18.9212" r="1.99342" stroke="#505050"/>
             <circle cx="12.0794" cy="18.9212" r="1.99342" stroke="#505050"/>
             <path d="M0.960938 0.825195H6.35248L7.00321 4.72407M7.00321 4.72407L8.95657 16.4277H24.5873L27.1913 4.72407H7.00321Z" stroke="#505050"/>
         </svg>
-    </div>
+    </a>
 </header>
