finish about page mobile

--- a/app/about.html
+++ b/app/about.html
@@ -4,6 +4,7 @@
     <div class="a_box--wrapper">
         <div class="a_box--title" data-scroll data-scroll-direction="horizontal" data-scroll-speed="-2">
             <img src="/images/dist/about--title.webp" alt="">
+            <span>About Flowdose</span>
         </div>
 
         <div class="a_box--tradition">
@@ -20,6 +21,7 @@
             </div>
         </div>
     </div>
+    <img src="images/dist/a_box--wrapper--bg.webp" alt="" class="a_box--wrapper--bg">
 
     <div class="a__wrapper">
         <div class="a_box--mood">
