--- a/app/products.html
+++ b/app/products.html
@@ -90,6 +90,7 @@
                 experience.</p>
         </div>
     </div>
+    <img src="images/dist/p_infused--bg--mobile.webp" alt="" class="p_infused--bg--mobile">
     <img src="/images/dist/p_infused--bg.webp" alt="" class="p_infused--bg">
 </section>
 
