--- a/app/single-product-tea.html
+++ b/app/single-product-tea.html
@@ -3,12 +3,22 @@
 <section class="sp_main">
     <div class="sp_main--wrapper">
         <div class="sp_main--left">
-            <div class="sp_main--image">
-                <img src="images/dist/sp_main--image--tea.webp" alt="">
+            <div class="swiper product-slider">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide sp_main--image">
+                        <img src="images/dist/sp_main--image--tea.webp" alt="">
+                    </div>
+                    <div class="swiper-slide sp_main--image">
+                        <img src="images/dist/sp_main--image--tea.webp" alt="">
+                    </div>
+                </div>
             </div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
         </div>
 
         <div class="sp_main--right">
+            <img src="images/dist/sp_main--right--top.svg" alt="" class="sp_main--right--top">
             <h1 class="sp_main--name">Organic Mushroom infused Tea</h1>
             <div class="sp_main--s_name">
                 <p>Lemon Ginger Tea - Caffeine free</p>
@@ -214,7 +224,7 @@
     <img src="images/dist/sp_unique--tea--bg.webp" alt="" class="sp_unique--tea--bg">
 </section>
 
-
+<!--
 <section class="sp_reviews">
     <div class="sp_reviews--wrapper">
         <div class="sp_reviews--title">
@@ -326,6 +336,6 @@
         </div>
         <button class="button button__more"><span>Load More</span></button>
     </div>
-</section>
+</section>-->
 
 <!--#include virtual="/parts/footer.html" -->
