--- a/app/single-product-caps.html
+++ b/app/single-product-caps.html
@@ -3,12 +3,22 @@
 <section class="sp_main">
     <div class="sp_main--wrapper">
         <div class="sp_main--left">
-            <div class="sp_main--image">
-                <img src="images/dist/sp_main--image.webp" alt="">
+            <div class="swiper product-slider">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide sp_main--image">
+                        <img src="images/dist/sp_main--image.webp" alt="">
+                    </div>
+                    <div class="swiper-slide sp_main--image">
+                        <img src="images/dist/sp_main--image.webp" alt="">
+                    </div>
+                </div>
             </div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
         </div>
 
         <div class="sp_main--right">
+            <img src="images/dist/sp_main--right--top.svg" alt="" class="sp_main--right--top">
             <h1 class="sp_main--name">Precision Caps</h1>
             <form>
                 <div class="sp_main--size">
@@ -352,7 +362,7 @@
 
     <img src="images/dist/sp_recommended--bg.webp" alt="" class="sp_recommended--bg">
 </section>
-
+<!--
 <section class="sp_reviews">
     <div class="sp_reviews--wrapper">
         <div class="sp_reviews--title">
@@ -465,5 +475,5 @@
         <button class="button button__more"><span>Load More</span></button>
     </div>
 </section>
-
+-->
 <!--#include virtual="/parts/footer.html" -->
