--- a/app/products.html
+++ b/app/products.html
@@ -3,7 +3,7 @@
 <section class="p_header">
     <div class="p_header--wrap">
         <h1 class="p_header--title" data-scroll data-scroll-speed="2">precision <br> caps</h1>
-        <div class="p_header--description" data-scroll data-scroll-speed="-2">
+        <div class="p_header--description" data-scroll data-scroll-speed="2">
             <p>Designed to help you reduce stress & anxiety, be creative, and stay focused. Perfect for meetings, work,
                 and everyday life</p>
         </div>
@@ -82,9 +82,8 @@
 
 <section class="p_infused">
     <div class="p_infused--wrap">
-        <h2 class="p_infused--title">organic mushroom
-            Infused TEA</h2>
-        <div class="p_infused--description">
+        <h2 class="p_infused--title" data-scroll data-scroll-speed="2">organic mushroom Infused TEA</h2>
+        <div class="p_infused--description" data-scroll data-scroll-speed="2">
             <p>We searched high and low to create the best tea that compliments the mushroom infusion. Top grade black
                 tea that has a balanced flavor, ginger to soothe the stomach and a citrus blend for a clean and smooth
                 experience.</p>
