--- a/app/parts/footer.html
+++ b/app/parts/footer.html
@@ -37,6 +37,7 @@
     </div>
     <img src="images/dist/footer__main--bg.webp" alt="" class="footer__main--bg">
 </footer>
+</main>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.0/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.0/ScrollTrigger.min.js"></script>
 <script src="js/app.min.js"></script>
