--- a/app/about.html
+++ b/app/about.html
@@ -1,8 +1,8 @@
 <!--#include virtual="/parts/header.html" -->
 
-<section class="a_box">
+<section class="a_box" data-scroll-section>
     <div class="a_box--wrapper">
-        <div class="a_box--title" data-scroll data-scroll-direction="horizontal" data-scroll-speed="-2">
+        <div class="a_box--title" data-scroll data-scroll-direction="vertical" data-scroll-speed="-1">
             <img src="/images/dist/about--title.webp" alt="">
             <span>About Flowdose</span>
         </div>
