--- a/app/faq.html
+++ b/app/faq.html
@@ -1,6 +1,6 @@
 <!--#include virtual="/parts/header.html" -->
 
-<section class="f_page">
+<section class="f_page" data-scroll-section>
     <div class="f_page--wrap">
         <h1 class="f_page--title">FAQ</h1>
 
