--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!--#include virtual="/parts/header.html" -->
-<section class="main__section">
+<section class="main__section" data-scroll-section>
     <div class="main__section--content">
         <h1 class="main__section--title">Science Backed Precision Dosing</h1>
         <a href="" class="button main__section--button"><span>Explore</span></a>
@@ -7,7 +7,7 @@
     <img src="images/dist/main__section--bg.webp" alt="" class="main__section--bg">
 </section>
 
-<section class="explore__section">
+<section class="explore__section" data-scroll-section>
     <div class="container" data-scroll data-scroll-speed="2">
         <h2 class="explore__section--title">Explore our Product</h2>
 
@@ -180,7 +180,7 @@
     <img src="images/dist/explore__section--bg.webp" alt="" class="explore__section--bg">
 </section>
 
-<section class="crafted__section">
+<section class="crafted__section" data-scroll-section>
     <div class="crafted__section--image">
         <img src="images/dist/crafted__section--image.webp" alt="">
     </div>
@@ -193,7 +193,7 @@
     </div>
 </section>
 
-<section class="benefits__section">
+<section class="benefits__section" data-scroll-section>
     <div class="container">
         <h2 class="benefits__section--title">Benefits</h2>
         <div class="benefits__section--wrap">
@@ -238,7 +238,7 @@
     <img src="images/dist/benefits__section--bg.webp" alt="" class="benefits__section--bg">
 </section>
 
-<section class="mushroom__section">
+<section class="mushroom__section" data-scroll-section>
     <div class="mushroom__wrap">
         <div class="mushroom__line">
             <svg width="108" height="108" viewBox="0 0 108 108" fill="none" xmlns="http://www.w3.org/2000/svg">
