--- a/app/parts/footer.html
+++ b/app/parts/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer__main">
+<footer class="footer__main" data-scroll-section>
     <div class="container">
         <div class="footer__main--info">
             <span>SPREADING HAPPINESS & GRATITUDE</span>
