--- a/app/products.html
+++ b/app/products.html
@@ -1,9 +1,9 @@
 <!--#include virtual="/parts/header.html" -->
 
-<section class="p_header">
+<section class="p_header" data-scroll-section>
     <div class="p_header--wrap">
-        <h1 class="p_header--title" data-scroll data-scroll-speed="2">precision <br> caps</h1>
-        <div class="p_header--description" data-scroll data-scroll-speed="2">
+        <h1 class="p_header--title" data-scroll data-scroll-speed="1">precision <br> caps</h1>
+        <div class="p_header--description" data-scroll data-scroll-speed="1">
             <p>Designed to help you reduce stress & anxiety, be creative, and stay focused. Perfect for meetings, work,
                 and everyday life</p>
         </div>
@@ -11,9 +11,9 @@
     <img src="/images/dist/p_header--bg.webp" alt="" class="p_header--bg">
 </section>
 
-<section class="p_products">
+<section class="p_products" data-scroll-section>
     <div class="p_products--wrap">
-        <a href="#" class="p_products--item">
+        <a href="http://localhost:3000/sp-caps.html" class="p_products--item">
             <div class="p_products--image">
                 <img src="/images/dist/p_products--item.webp" alt="">
             </div>
@@ -26,7 +26,7 @@
             </div>
         </a>
 
-        <a href="#" class="p_products--item">
+        <a href="http://localhost:3000/sp-caps.html" class="p_products--item">
             <div class="p_products--image">
                 <img src="/images/dist/p_products--item.webp" alt="">
             </div>
@@ -39,7 +39,7 @@
             </div>
         </a>
 
-        <a href="#" class="p_products--item">
+        <a href="http://localhost:3000/sp-caps.html" class="p_products--item">
             <div class="p_products--image">
                 <img src="/images/dist/p_products--item.webp" alt="">
             </div>
@@ -52,7 +52,7 @@
             </div>
         </a>
 
-        <a href="#" class="p_products--item">
+        <a href="http://localhost:3000/sp-caps.html" class="p_products--item">
             <div class="p_products--image">
                 <img src="/images/dist/p_products--item.webp" alt="">
             </div>
@@ -65,7 +65,7 @@
             </div>
         </a>
 
-        <a href="#" class="p_products--item">
+        <a href="http://localhost:3000/sp-caps.html" class="p_products--item">
             <div class="p_products--image">
                 <img src="/images/dist/p_products--item.webp" alt="">
             </div>
@@ -80,10 +80,10 @@
     </div>
 </section>
 
-<section class="p_infused">
+<section class="p_infused" data-scroll-section>
     <div class="p_infused--wrap">
-        <h2 class="p_infused--title" data-scroll data-scroll-speed="2">organic mushroom Infused TEA</h2>
-        <div class="p_infused--description" data-scroll data-scroll-speed="2">
+        <h2 class="p_infused--title" data-scroll data-scroll-speed="1">organic mushroom Infused TEA</h2>
+        <div class="p_infused--description" data-scroll data-scroll-speed="1">
             <p>We searched high and low to create the best tea that compliments the mushroom infusion. Top grade black
                 tea that has a balanced flavor, ginger to soothe the stomach and a citrus blend for a clean and smooth
                 experience.</p>
@@ -93,9 +93,9 @@
     <img src="/images/dist/p_infused--bg.webp" alt="" class="p_infused--bg">
 </section>
 
-<section class="p_products">
+<section class="p_products" data-scroll-section>
     <div class="p_products--wrap">
-        <a href="#" class="p_products--item">
+        <a href="http://localhost:3000/sp-tea.html" class="p_products--item">
             <div class="p_products--image">
                 <img src="/images/dist/p_products--item-2.webp" alt="">
             </div>
@@ -108,7 +108,7 @@
             </div>
         </a>
 
-        <a href="#" class="p_products--item">
+        <a href="http://localhost:3000/sp-tea.html" class="p_products--item">
             <div class="p_products--image">
                 <img src="/images/dist/p_products--item-2.webp" alt="">
             </div>
@@ -121,7 +121,7 @@
             </div>
         </a>
 
-        <a href="#" class="p_products--item">
+        <a href="http://localhost:3000/sp-tea.html" class="p_products--item">
             <div class="p_products--image">
                 <img src="/images/dist/p_products--item-2.webp" alt="">
             </div>
