--- a/app/sp-caps.html
+++ b/app/sp-caps.html
@@ -1,6 +1,6 @@
 <!--#include virtual="/parts/header.html" -->
 
-<section class="sp_main">
+<section class="sp_main" data-scroll-section>
     <div class="sp_main--wrapper">
         <div class="sp_main--left">
             <div class="swiper product-slider">
@@ -90,7 +90,7 @@
     </div>
 </section>
 
-<section class="sp_faq">
+<section class="sp_faq" data-scroll-section>
     <div class="sp_faq--wrapper">
 
         <div class="sp_faq--item">
@@ -199,7 +199,7 @@
     </div>
 </section>
 
-<section class="sp_benefits">
+<section class="sp_benefits" data-scroll-section>
     <div class="sp_benefits--wrapper">
         <h3 class="sp_benefits--title">benefits</h3>
         <div class="sp_benefits--box">
@@ -243,7 +243,7 @@
     <img src="images/dist/sp_benefits--bg.webp" alt="" class="sp_benefits--bg">
 </section>
 
-<section class="sp_unique">
+<section class="sp_unique" data-scroll-section>
     <div class="sp_unique--wrapper">
         <div class="sp_unique--text">
             <h4 class="sp_unique--text__title">What makes our Mushrooms unique</h4>
@@ -266,7 +266,7 @@
     </div>
 </section>
 
-<section class="sp_recommended">
+<section class="sp_recommended" data-scroll-section>
     <div class="sp_recommended--wrapper">
         <h3 class="sp_recommended--title">RECOMMENDED ACTIVITIES</h3>
         <div class="sp_recommended--description">
@@ -363,7 +363,7 @@
     <img src="images/dist/sp_recommended--bg.webp" alt="" class="sp_recommended--bg">
 </section>
 <!--
-<section class="sp_reviews">
+<section class="sp_reviews" data-scroll-section>
     <div class="sp_reviews--wrapper">
         <div class="sp_reviews--title">
             <span>reviews</span>
