--- a/app/sp-tea.html
+++ b/app/sp-tea.html
@@ -1,6 +1,6 @@
 <!--#include virtual="/parts/header.html" -->
 
-<section class="sp_main">
+<section class="sp_main" data-scroll-section>
     <div class="sp_main--wrapper">
         <div class="sp_main--left">
             <div class="swiper product-slider">
@@ -76,7 +76,7 @@
     </div>
 </section>
 
-<section class="sp_faq">
+<section class="sp_faq" data-scroll-section>
     <div class="sp_faq--wrapper">
 
         <div class="sp_faq--item">
@@ -142,7 +142,7 @@
     </div>
 </section>
 
-<section class="sp_benefits">
+<section class="sp_benefits" data-scroll-section>
     <div class="sp_benefits--wrapper">
         <h3 class="sp_benefits--title">benefits</h3>
         <div class="sp_benefits--box">
@@ -186,7 +186,7 @@
     <img src="images/dist/sp_benefits--bg-2.webp" alt="" class="sp_benefits--bg">
 </section>
 
-<section class="sp_unique sp_unique--tea">
+<section class="sp_unique sp_unique--tea" data-scroll-section>
     <div class="sp_unique--wrapper">
         <div class="sp_unique--text__item">
             <div class="sp_unique--text">
@@ -225,7 +225,7 @@
 </section>
 
 <!--
-<section class="sp_reviews">
+<section class="sp_reviews" data-scroll-section>
     <div class="sp_reviews--wrapper">
         <div class="sp_reviews--title">
             <span>reviews</span>
