--- a/app/products.html
+++ b/app/products.html
@@ -13,7 +13,7 @@
 
 <section class="p_products" data-scroll-section>
     <div class="p_products--wrap">
-        <a href="http://localhost:3000/sp-caps.html" class="p_products--item">
+        <a href="/sp-caps.html" class="p_products--item">
             <div class="p_products--image">
                 <img src="/images/dist/p_products--item.webp" alt="">
             </div>
@@ -26,7 +26,7 @@
             </div>
         </a>
 
-        <a href="http://localhost:3000/sp-caps.html" class="p_products--item">
+        <a href="/sp-caps.html" class="p_products--item">
             <div class="p_products--image">
                 <img src="/images/dist/p_products--item.webp" alt="">
             </div>
@@ -39,7 +39,7 @@
             </div>
         </a>
 
-        <a href="http://localhost:3000/sp-caps.html" class="p_products--item">
+        <a href="/sp-caps.html" class="p_products--item">
             <div class="p_products--image">
                 <img src="/images/dist/p_products--item.webp" alt="">
             </div>
@@ -52,7 +52,7 @@
             </div>
         </a>
 
-        <a href="http://localhost:3000/sp-caps.html" class="p_products--item">
+        <a href="/sp-caps.html" class="p_products--item">
             <div class="p_products--image">
                 <img src="/images/dist/p_products--item.webp" alt="">
             </div>
@@ -65,7 +65,7 @@
             </div>
         </a>
 
-        <a href="http://localhost:3000/sp-caps.html" class="p_products--item">
+        <a href="/sp-caps.html" class="p_products--item">
             <div class="p_products--image">
                 <img src="/images/dist/p_products--item.webp" alt="">
             </div>
@@ -95,7 +95,7 @@
 
 <section class="p_products" data-scroll-section>
     <div class="p_products--wrap">
-        <a href="http://localhost:3000/sp-tea.html" class="p_products--item">
+        <a href="/sp-tea.html" class="p_products--item">
             <div class="p_products--image">
                 <img src="/images/dist/p_products--item-2.webp" alt="">
             </div>
@@ -108,7 +108,7 @@
             </div>
         </a>
 
-        <a href="http://localhost:3000/sp-tea.html" class="p_products--item">
+        <a href="/sp-tea.html" class="p_products--item">
             <div class="p_products--image">
                 <img src="/images/dist/p_products--item-2.webp" alt="">
             </div>
@@ -121,7 +121,7 @@
             </div>
         </a>
 
-        <a href="http://localhost:3000/sp-tea.html" class="p_products--item">
+        <a href="/sp-tea.html" class="p_products--item">
             <div class="p_products--image">
                 <img src="/images/dist/p_products--item-2.webp" alt="">
             </div>
